--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -73,6 +73,7 @@
   border-radius: 5px;
 
   background-color: #f4feff;
+  cursor:pointer
 }
 .product__line {
   background: url("../../../assets/images/products_bg.png");
