--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   outline: none;
   box-sizing: border-box;
 }
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 button {
   border-style: none;
 }
@@ -15,4 +20,3 @@ a {
   text-decoration: none;
   color: unset;
 }
-
