--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,20 +3,23 @@
 .header {
   font-family: Geometria;
   font-weight: 500;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+  z-index: 10;
 }
 .header__container {
-  padding: 10px 30px;
+  padding: 10px 80px;
   border-bottom: 2px solid #e8e8e8;
 }
 .header__content {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 .header__left {
   width: 45%;
 }
 .header__right {
   width: 55%;
+  margin-top: 5px;
 }
 
 .header__left ul {
@@ -25,7 +28,7 @@
   align-items: center;
 }
 .header__left ul li {
-  font-size: 16px;
+  font-size: 14px;
   margin-right: 18px;
   position: relative;
   cursor: pointer;
@@ -37,14 +40,17 @@
   color: #ff0000;
 }
 .header__left ul li::after {
-  content: "";
+  content: url("../../assets/images/new_design/red_dot.svg");
   display: block;
   position: absolute;
-  width: 100%;
-  height: 2px;
-  background: #ff0000;
-  margin-top: 10px;
+  /* width: 100%;
+  height: 2px; */
+  /* background: #ff0000; */
+
   transition: all 0.3s linear;
+  top: 13px;
+  left: 50%;
+  right: 50%;
   opacity: 0;
 }
 .header__left ul li:hover::after {
@@ -52,6 +58,24 @@
 }
 .header__left ul li:last-child {
   margin-right: 0;
+}
+.header__catalog {
+  width: 120px;
+  height: 35px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(206, 53, 53, 1) 61%,
+    rgba(170, 39, 75, 1) 100%
+  );
+  font-size: 14px;
+  color: #fff;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .header__right {
   display: flex;
@@ -67,13 +91,39 @@
   margin-left: 30px;
   cursor: pointer;
 }
-.header__sign {
+.header__assets {
+}
+.header__assets-top {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
+.header__assets-top div {
+  text-align: center;
+}
+.header__assets-top div p {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.header__assets-top div {
+  margin-right: 30px;
+  cursor: pointer;
+}
+.header__assets-top div:last-child {
+  margin-right: 0;
+}
+.header__assets-bottom {
+  margin-top: 10px;
+}
+.header__assets-bottom input {
+  width: 100%;
+  height: 35px;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
 .header__search {
-	cursor: pointer;
+  cursor: pointer;
 }
 .header__btn button {
   padding: 10px 40px;
