--- a/src/pages/Contacts/Contacts.css
+++ b/src/pages/Contacts/Contacts.css
@@ -1,28 +1,41 @@
 .contacts__container {
-	padding: 0 50px 40px 100px;
+  padding: 0 50px 125px 100px;
 }
 h2 {
-  color: #ff0000;
+  margin: 70px 0 35px;
+  text-align: left;
+}
+h2 span {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+
   font-family: Geometria;
   font-weight: 700;
   font-size: 40px;
-  text-align: center;
-  margin: 35px 0 50px;
 }
 .contacts__content {
-	display: flex;
+  display: flex;
+  justify-content: space-between;
 }
 .contacts__left {
-	width: 50%;
-	  font-family: Geometria;
+  width: 60%;
+  font-family: Geometria;
   font-weight: 500;
   color: #3e3e3e;
-  padding-top: 20px;
-  
 
+  padding: 40px;
+  background-color: #fff;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
 .contacts__left ul li {
-	 margin-bottom: 25px;
+  margin-bottom: 25px;
   display: flex;
   align-items: center;
 }
@@ -30,13 +43,16 @@ h2 {
   margin-left: 35px;
 }
 .contact_map {
-	width: 450px;
-
+  width: 450px;
+  margin-left: 30px;
 }
 .contact_map img {
-	width: 100%;
+  width: 100%;
 }
 
 .contacts__right {
-	width: 50%;
+  width: 35%;
+}
+.contacts__right img {
+  width: 100%;
 }
