--- a/src/pages/Delivery/Delivery.css
+++ b/src/pages/Delivery/Delivery.css
@@ -2,18 +2,34 @@
   padding: 0 50px 120px 100px;
 }
 h2 {
-  color: #ff0000;
+  margin: 70px 0 35px;
+  text-align: left;
+}
+
+h2 span {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+
   font-family: Geometria;
   font-weight: 700;
   font-size: 40px;
-  text-align: center;
-  margin: 35px 0 50px;
 }
 .delivery__content {
   display: flex;
 }
 .delivery__left {
   width: 50%;
+    padding: 30px;
+  background-color: #fff;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+
 }
 .delivery__text p {
   margin-bottom: 15px;
