--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,8 @@
 @import url("../../assets/fonts/fonts.css");
 
 .header {
+}
+.header__wrapper {
   font-family: Geometria;
   font-weight: 500;
   box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
