--- a/src/components/Main/Category/Category.css
+++ b/src/components/Main/Category/Category.css
@@ -1,6 +1,57 @@
 @import url("../../../assets/fonts/fonts.css");
 
-.category__container {
+.category__content {
+  display: flex;
+  justify-content: space-between;
+  color: #3e3e3e;
+  font-size: 13px;
+  font-family: Geometria;
+}
+.category__content .active {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+
+  font-family: Geometria;
+  font-weight: 700;
+}
+.category__left {
+  width: 25%;
+  border-right: 2px solid #e0e0e0;
+}
+.category__left ul li {
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.category__middle {
+  width: 25%;
+}
+.category__middle ul li {
+  margin-left: 50px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.category__right {
+  width: 58%;
+}
+.category__right {
+  text-align: right;
+  padding-right: 30px;
+}
+.category__right img {
+  display: inline-block;
+  width: 350px;
+  height: 300px;
+  /* margin: 0 auto; */
+}
+
+/* ************************************************************************************ */
+/* .category__container {
   padding: 0 30px;
 }
 .category__title {
@@ -60,4 +111,4 @@
   z-index: 10;
   text-align: center;
   color: #ffffff;
-}
+} */
