--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -12,10 +12,9 @@
   font-size: 36px;
   text-align: left;
   font-weight: 700;
-
 }
 .products__title h2 span {
-	  color: transparent;
+  color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
   background-image: linear-gradient(
@@ -23,7 +22,6 @@
     rgba(255, 72, 72, 1) 0%,
     rgba(170, 39, 39, 1) 100%
   );
-
 }
 .product__sorting {
   display: flex;
@@ -99,7 +97,7 @@
 .product__name {
   font-size: 14px;
   font-weight: 500;
-  margin: 20px 0 10px;
+  margin: 10px 0;
   color: #3e3e3e;
   /* text-align: center; */
 }
