--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("./assets/fonts/fonts.css");
 html {
   overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 body {
   margin: 0;
