--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,7 +26,7 @@ h3 {
   margin-bottom: 30px;
 }
 .footer__contact {
-  width: 33%;
+  width: 32%;
 }
 .footer__contact ul li {
   margin-bottom: 25px;
@@ -37,7 +37,7 @@ h3 {
   margin-left: 35px;
 }
 .footer__map {
-  width: 33%;
+  width: 32%;
   display: flex;
   align-items: center;
 }
@@ -46,16 +46,16 @@ h3 {
   max-width: 340px;
 }
 .footer__form {
-  width: 33%;
+  width: 32%;
 }
 .footer__form form {
   text-align: center;
   width: 100%;
 }
 .footer__form form input {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   display: block;
-  width: 350px;
+  width: 100%;
   height: 30px;
   margin-bottom: 25px;
 }
