--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -17,14 +17,11 @@
 .banner__left {
   width: 65%;
   height: 355px;
-  background: url("../../../assets/images/new_design/banner_main.png");
-  background-repeat: no-repeat;
-  background-size: contain;
+  /* background: url("../../../assets/images/new_design/banner_main.png"); */
+  /* background-repeat: no-repeat;
+  background-size: contain; */
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
   border-radius: 10px;
-  padding: 35px 25px;
-  display: flex;
-  align-items: flex-end;
   /* padding-left: 50px; */
 }
 /* .banner__left h1 {
@@ -32,6 +29,21 @@
   font-size: 48px;
   color: #ff0000;
 } */
+.banner__left--img {
+  width: 100%;
+  min-height: 355px;
+  position: relative;
+}
+.banner__left--img img {
+  position: absolute;
+  height: 100%;
+}
+.banner__btn {
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  padding: 20px;
+}
 .banner__btn button {
   padding: 5px 15px;
   font-family: Geometria;
@@ -41,26 +53,28 @@
   background: #c4c4c4;
   margin-top: 60px;
   border-radius: 10px;
+  z-index: 20;
 }
 
 .banner__right {
-  width: 35%;
+  width: 33%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.banner__right--top {
-  background: url("../../../assets/images/new_design/banner_main.png");
-  background-size: contain;
+.banner__right--img {
+  /* background: url("../../../assets/images/new_design/banner_main.png"); */
+  /* background-size: contain; */
   border-radius: 10px;
-
+  width: 100%;
   height: 170px;
 
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
-  padding: 12px 18px;
-
-  display: flex;
-  align-items: flex-end;
+  position: relative;
+}
+.banner__right--img img {
+  position: absolute;
+  height: 100%;
 }
 .banner__right--bottom {
   border-radius: 10px;
