--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -1,9 +1,12 @@
 .logo {
   background-color: #f4feff;
   box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+
+  width: 100%;
 }
 .logo__container {
   padding: 0 30px;
+  width: 100%;
 
 }
 .logo__content {
