--- a/src/components/Main/Category/Category.css
+++ b/src/components/Main/Category/Category.css
@@ -6,8 +6,9 @@
   color: #3e3e3e;
   font-size: 13px;
   font-family: Geometria;
+  font-weight: 500;
 }
-.category__content .active {
+/* .category__content .active {
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -19,7 +20,21 @@
 
   font-family: Geometria;
   font-weight: 700;
+} */
+.category__content ul li {
+	transition: all .3s linear;
 }
+.category__content ul li:hover {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+}
+
 .category__left {
   width: 25%;
   border-right: 2px solid #e0e0e0;
