--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type="radio"] {
+
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: #3e3e3e;
+  width: 1.15em;
+  height: 1.15em;
+  border: 1px solid #3e3e3e;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em #f00000;
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
+}
