--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -23,6 +23,7 @@
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
   border-radius: 10px;
   /* padding-left: 50px; */
+  overflow: hidden;
 }
 /* .banner__left h1 {
   max-width: 600px;
