--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,20 @@
 @import url("../../assets/fonts/fonts.css");
 
 .header {
-	width: 100%;
-}
-.header__wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   font-family: Geometria;
   font-weight: 500;
   box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
   z-index: 10;
+  background-color: #fff;
 }
 .header__container {
-  padding: 10px 80px;
+  padding: 10px 120px;
   border-bottom: 2px solid #e8e8e8;
+  min-height: 95px;
 }
 .header__content {
   display: flex;
@@ -29,7 +32,9 @@
   width: 100%;
   display: flex;
   align-items: center;
+  padding-left: 0;
 }
+
 .header__left ul li {
   font-size: 14px;
   margin-right: 18px;
@@ -145,4 +150,176 @@
 
 .active {
   color: #ff0000;
+}
+
+/* *********************************  MEDIA QUERY  ************************************* */
+
+/* *********************************  max-width: 768px  *************************************** */
+.header__content.mobile {
+  display: none;
+}
+.header__mobile--top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__mobile--bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 767px) {
+  .header__content.computer {
+    display: none;
+  }
+  .header__content.mobile {
+    display: block;
+  }
+  .header__container {
+    padding: 10px 70px;
+  }
+  .header__logo {
+    margin: 0;
+    z-index: 10;
+  }
+  .header__mobile--middle {
+    z-index: 10;
+  }
+
+  .header__assets-bottom {
+    max-width: 170px;
+  }
+  .header__catalog {
+    width: 170px;
+  }
+  .header__mobile--button {
+    z-index: 5;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    display: block;
+  }
+  .header__mobile--button span,
+  .header__mobile--button::before,
+  .header__mobile--button::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all 0.3s linear;
+    background-color: #000;
+  }
+  .header__mobile--button::before,
+  .header__mobile--button::after {
+    content: "";
+  }
+  .header__mobile--button::before {
+    top: 0;
+  }
+  .header__mobile--button::after {
+    bottom: 0;
+  }
+  .header__mobile--button span {
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+  .header__mobile--button._active span {
+    transform: scale(0) translate(0px, -50%);
+  }
+  .header__mobile--button._active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0px, -50%);
+  }
+  .header__mobile--button._active::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0px, 50%);
+  }
+  .header__mobile--menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.9); */
+    background-color: #fafaf2;
+    padding: 150px 70px 30px 70px;
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+    left: -100%;
+  }
+  .header__mobile--menu._active {
+    left: 0;
+  }
+  .header__mobile--menu::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 117px;
+    background-color: #fff;
+    z-index: 5px;
+  }
+  .header__mobile--menu ul {
+    border-bottom: 1px solid #000;
+    margin-bottom: 30px;
+  }
+  .header__mobile--menu ul li {
+    margin: 0 0 30px 0;
+    font-size: 24px;
+    color: #2e2d2d;
+  }
+  .header__assets {
+    font-size: 24px;
+    cursor: pointer;
+    transition: all 0.3s linear;
+    color: #2e2d2d;
+    font-weight: 500;
+    font-family: Geometria;
+  }
+  .header__assets .item {
+    margin: 0 0 30px 0;
+  }
+  .header__assets .item a {
+    display: flex;
+    align-items: center;
+  }
+  .header__assets .header__login {
+    display: flex;
+    align-items: center;
+  }
+  .header__assets .item span {
+    margin-right: 10px;
+  }
+}
+
+/* *********************************  max-width: 1200px  *************************************** */
+@media (max-width: 1200px) {
+  .header__container {
+    padding: 10px 50px;
+  }
+  .header__right {
+    width: 50%;
+  }
+  .header__left {
+    width: 50%;
+  }
+}
+/* *********************************  max-width: 992px  *************************************** */
+
+@media (max-width: 992px) {
+  .header__container {
+    padding: 10px 30px;
+  }
+  .header__right {
+    width: 49%;
+  }
+  .header__left {
+    width: 51%;
+  }
+  .header__left ul li {
+    font-size: 12px;
+    margin-right: 10px;
+  }
 }
