--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -1,7 +1,7 @@
 .product {
 }
 .products__container {
-  padding: 0 80px 35px;
+  padding: 0 120px 35px;
 }
 
 .products__title {
@@ -9,7 +9,7 @@
 }
 .products__title h2 {
   margin: 0;
-  font-size: 36px;
+  font-size: 30px;
   text-align: left;
   font-weight: 700;
 }
@@ -71,7 +71,7 @@
   flex-wrap: wrap;
 }
 .product__item {
-  max-width: 280px;
+  max-width: 250px;
   font-family: Geometria;
   font-weight: 500;
   color: #272626;
@@ -85,10 +85,13 @@
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
 }
 .product__img {
-  width: 280px;
+  width: 250px;
+  height: 155px;
 }
 .product__img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .product__item--content {
@@ -127,10 +130,10 @@
 .product__buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 35px;
+  margin-top: 25px;
 }
 .product__cart-button {
-  padding: 8px 35px;
+  padding: 8px 20px;
 
   background: linear-gradient(
     90deg,
