--- a/src/pages/Compare/Compare.css
+++ b/src/pages/Compare/Compare.css
@@ -1,5 +1,5 @@
 .compare__container {
-  padding: 0 80px 130px 80px;
+  padding: 80px 120px 130px 120px;
 }
 
 /* .categoriesPage__title {
@@ -104,6 +104,15 @@
   /* filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05)); */
   border-bottom: 1px solid #272626;
 }
+.compare__item:first-child .compare__item--card {
+  background-color: #c9c1c1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.compare__item:first-child .compare__item--field {
+  background-color: #c9c1c1;
+}
 .compare__item--field {
   padding: 20px;
   max-width: 300px;
@@ -123,7 +132,7 @@
   background-color: #ffffff;
   height: 250px;
 }
-.compare__left .compare__item--card:first-child {
+/* .compare__left .compare__item--card:first-child {
   background-color: #c9c1c1;
   display: flex;
   align-items: center;
@@ -131,7 +140,7 @@
 }
 .compare__left .compare__item--field {
   background-color: #c9c1c1;
-}
+} */
 .compare__img {
   width: 200px;
   margin: 0 auto;
@@ -153,6 +162,7 @@
 }
 .compare__price {
   /* text-align: left; */
+  margin-bottom: 10px;
 }
 .compare__price span {
   font-size: 18px;
