--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -4,7 +4,7 @@
   color: #3f3d56;
 }
 .productPage__container {
-  padding: 30px 80px;
+  padding: 30px 120px;
 }
 .productPage__path {
   font-size: 14px;
@@ -37,12 +37,14 @@
   flex-direction: column;
   justify-content: space-between;
   width: 55px;
+  height: 55px;
   margin-right: 30px;
 }
 
 .productPage__top--restImages div img {
   width: 100%;
-  height: 55px;
+  height: 100%;
+  object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
 }
@@ -60,6 +62,7 @@
   height: 100%;
   border-radius: 10px;
   display: block;
+  object-fit: cover;
 }
 .productPage__top--mainImage span {
   font-size: 12px;
